--- a/app/src/main/res/layout/activity_camara.xml
+++ b/app/src/main/res/layout/activity_camara.xml
@@ -19,14 +19,27 @@
         app:layout_constraintVertical_bias="0.96" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btTomarFoto"
+        android:layout_width="366dp"
+        android:layout_height="272dp"
+        android:background="@drawable/camara"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.717" />
+        app:layout_constraintVertical_bias="0.006" />
+
+    <ImageView
+        android:id="@+id/ivMostrarFoto"
+        android:layout_width="318dp"
+        android:layout_height="299dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.703"
+        app:srcCompat="@drawable/imagen" />
 </androidx.constraintlayout.widget.ConstraintLayout>
